HBASE-30332 Adapt tests for branch-2